name:                CS316-Y2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bobatkey/CS316-Y2020#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable CS316-Y2020
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      lecture-notes
  exposed-modules:     Week1
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

