name:                CS316-Y2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bobatkey/CS316-Y2020#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-cs316
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Ex1
  hs-source-dirs:      exercises
  main-is:             Ex1Main.hs
  other-modules:       Ex1
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      lecture-notes
  exposed-modules:     Week01,
                       Week02,
                       Week03,
                       Week04,
                       Week05,
                       Week06,
                       Week07,
                       Week08,
                       Week09,
                       Week10
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split == 0.2.3.3
