name:                CS316-Y2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bobatkey/CS316-Y2020#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Atkey
maintainer:          robert.atkey@strath.ac.uk
copyright:           BSD3
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-cs316
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Ex1
  hs-source-dirs:      exercises
  main-is:             Ex1Main.hs
  other-modules:       Ex1
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.2

executable Ex2
  hs-source-dirs:      exercises
  main-is:             Ex2Main.hs
  other-modules:       Ex2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.2

executable Ex3
  hs-source-dirs:      exercises
  main-is:             Ex3Main.hs
  other-modules:       Ex3,Result,ParserCombinators
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.2,
                       containers >= 0.6.0.1

library
  hs-source-dirs:      lecture-notes
  exposed-modules:     Week01,
                       Week01Solutions,
                       Week02,
                       Week02Solutions,
                       Week03,
                       Week03Solutions,
                       Week04,
                       Week05,
                       Week06,
                       Week07,
                       Week08,
                       Week09,
                       Week10
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split == 0.2.3.3,
                       HTTP >= 4000.3.14
